tests/errors/path_mixed_list_no_common_type.dang
# List element merging is strict: Path and String elements do not unify
# (degrade coercion applies only at value-handoff boundaries).
let p = Path("a")
let mixed = [p, "b"]
